# meadtools-desktop

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yaml
public/locales/de/: default.json
public/locales/en/: default.json
public/locales/fr/: default.json
public/locales/pl/: default.json
src/: App.tsx  main.tsx  updateDialog.tsx  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Account/: LocalRecipes.tsx  Login.tsx
src/components/Dashboard/: Reset.tsx  dashboardData.ts
src/components/Dashboard/ingredients/: EditIngredient.tsx  EditIngredientForm.tsx  IngredientDashboard.tsx  IngredientTable.tsx  Ingredients.tsx  NewIngredientForm.tsx
src/components/Dashboard/yeasts/: EditYeast.tsx  EditYeastForm.tsx  NewYeastForm.tsx  YeastDashboard.tsx  YeastTable.tsx  Yeasts.tsx
src/components/Home/: Home.tsx  Ingredient.tsx  PDF.tsx  RecipeBuilder.tsx  SaveRecipeForm.tsx
src/components/Navs/: Navbar.tsx
src/components/Nutrients/: MainInputs.tsx
src/components/PillData/: EditHydro.tsx  EntryForm.tsx  LineChart.tsx  ManualEntry.tsx  Pill.tsx
src/components/Recipes/: LocalRecipe.tsx  LocalRecipeForm.tsx  Recipes.tsx
src/components/YeastDataTable/: Table.tsx  columns.tsx  data-table.tsx
src/components/ui/: Language-switcher.tsx  LoadingTable.tsx  calendar.tsx  chart.tsx  datetime-picker.tsx  inline-code.tsx
src/db/: fermentables.ts  index.ts  yeast.ts
src/helpers/: getAllIngredients.ts  getAllYeasts.ts
src/hooks/: usePathContext.tsx  useUpdateDialog.ts
src/localization/: i18n.ts
